@@ -9,6 +9,8 @@ catnr:  03
 
 #pragma once
 
+#include "ProtoInterface.h"
+
 #pragma GCC diagnostic push
 #pragma GCC diagnostic ignored "-Wunused-parameter"
 #pragma GCC diagnostic ignored "-Wnon-virtual-dtor"
@@ -17,8 +19,7 @@ catnr:  03
 #include "pop3.grpc.pb.h"
 #pragma GCC diagnostic pop
 
-#include "ProtoInterface.h"
-
+// POP3CSImplementation, gRPC Server
 class POP3CSImplementation final : public pop3msg::POP3CS::Service {
     private:
         ProtoInterface &protoi;
@@ -26,6 +27,7 @@ class POP3CSImplementation final : public pop3msg::POP3CS::Service {
     public:
         explicit POP3CSImplementation(ProtoInterface &pi):protoi(pi) {}
 
+        // returns a MailList Proto Construct to the client
         grpc::Status get_mail_list(
             [[maybe_unused]] grpc::ServerContext* context, 
             const pop3msg::Operation* operation, 
@@ -36,6 +38,7 @@ class POP3CSImplementation final : public pop3msg::POP3CS::Service {
             return grpc::Status::OK;
         };
 
+        // Recieves instruction form the client and saves a mail locally
         grpc::Status save_mail(
             [[maybe_unused]] grpc::ServerContext* context, 
             const pop3msg::Operation* operation, 
@@ -46,6 +49,7 @@ class POP3CSImplementation final : public pop3msg::POP3CS::Service {
             return grpc::Status::OK;
         };
 
+        // Recieves instruction from the client and deletes a message
         grpc::Status delete_message(
             [[maybe_unused]] grpc::ServerContext* context, 
             const pop3msg::Operation* operation, 
@@ -56,6 +60,7 @@ class POP3CSImplementation final : public pop3msg::POP3CS::Service {
             return grpc::Status::OK;
         };
 
+        // Recieves instructions from the client and disconnects from the POP3 Server
         grpc::Status disconnect(
             [[maybe_unused]] grpc::ServerContext* context, 
             [[maybe_unused]] const pop3msg::Operation* operation, 
