@@ -1,7 +1,7 @@
 /*
 author: David Fischer
 matnr:  i16079
-file:   Protointerface.cpp
+file:   ProtoInterface.cpp
 desc:   NVS Projekt 2 - Simpler POP3 Client mit TLS Support
 class:  5C
 catnr:  03
@@ -11,8 +11,7 @@ catnr:  03
 
 using namespace std;
 
-// PROTO INTERFACE
-
+// parses the vector of strings and converts it to a MailMeta Proto Construct
 int ProtoInterface::retrieve_message_meta_proto(int message_id, pop3msg::MailMeta *temp_mail_meta){
     vector<string> res_vec = client.retrieve_message_metadata(message_id);
 
@@ -28,6 +27,7 @@ int ProtoInterface::retrieve_message_meta_proto(int message_id, pop3msg::MailMet
     return 0;
 }
 
+// dry run helper function
 int ProtoInterface::retrieve_message_meta_proto_dry(int message_id){
     vector<string> res_vec = client.retrieve_message_metadata(message_id);
 
@@ -38,6 +38,7 @@ int ProtoInterface::retrieve_message_meta_proto_dry(int message_id){
     return 0;
 }
 
+// parses fills a MailList Proto Construct with MailMeta Proto Consturuct
 int ProtoInterface::retrieve_messages(pop3msg::MailList *temp_mail_list, int amount){
     int total_messages = client.get_total_messages();
 
@@ -61,8 +62,6 @@ int ProtoInterface::retrieve_messages(pop3msg::MailList *temp_mail_list, int amo
         cur_message -= 1;
     }
 
-    // run
-
     // retrieve (overcompensate for deleted messages)
     int i = 1;
     while(i <= retrieve){
@@ -83,6 +82,7 @@ int ProtoInterface::retrieve_messages(pop3msg::MailList *temp_mail_list, int amo
     return 0;
 }
 
+// instructs the client to save an email and creates a Success Proto Construct
 int ProtoInterface::save_mail(pop3msg::Success *suc, int message_id){
     int check = client.save_mail(message_id);
 
@@ -92,6 +92,7 @@ int ProtoInterface::save_mail(pop3msg::Success *suc, int message_id){
     return check;
 }
 
+// instructs the client to delete an email and creates a Success Proto Construct
 int ProtoInterface::delete_message(pop3msg::Success *suc, int message_id){
     int check = client.delete_message(message_id);
 
@@ -101,6 +102,7 @@ int ProtoInterface::delete_message(pop3msg::Success *suc, int message_id){
     return check;
 }
 
+// instructs the client to disconnect from the POP3 Server and creates a Sucess Proto Construct
 int ProtoInterface::disconnect(pop3msg::Success *suc){
     int check = client.quit();
 
